--- a/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
+++ b/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
@@ -1,197 +1,180 @@
 /* quarto syntax highlight colors */
 :root {
-  --quarto-hl-ot-color: #003B4F;
-  --quarto-hl-at-color: #657422;
-  --quarto-hl-ss-color: #20794D;
-  --quarto-hl-an-color: #5E5E5E;
-  --quarto-hl-fu-color: #4758AB;
-  --quarto-hl-st-color: #20794D;
-  --quarto-hl-cf-color: #003B4F;
-  --quarto-hl-op-color: #5E5E5E;
-  --quarto-hl-er-color: #AD0000;
-  --quarto-hl-bn-color: #AD0000;
-  --quarto-hl-al-color: #AD0000;
-  --quarto-hl-va-color: #111111;
-  --quarto-hl-bu-color: inherit;
-  --quarto-hl-ex-color: inherit;
-  --quarto-hl-pp-color: #AD0000;
-  --quarto-hl-in-color: #5E5E5E;
-  --quarto-hl-vs-color: #20794D;
-  --quarto-hl-wa-color: #5E5E5E;
-  --quarto-hl-do-color: #5E5E5E;
-  --quarto-hl-im-color: #00769E;
-  --quarto-hl-ch-color: #20794D;
-  --quarto-hl-dt-color: #AD0000;
-  --quarto-hl-fl-color: #AD0000;
-  --quarto-hl-co-color: #5E5E5E;
-  --quarto-hl-cv-color: #5E5E5E;
-  --quarto-hl-cn-color: #8f5902;
-  --quarto-hl-sc-color: #5E5E5E;
-  --quarto-hl-dv-color: #AD0000;
-  --quarto-hl-kw-color: #003B4F;
+  --quarto-hl-al-color: #ff3333;
+  --quarto-hl-an-color: #e6b673;
+  --quarto-hl-at-color: #59c2ff;
+  --quarto-hl-bn-color: #e6b450;
+  --quarto-hl-bu-color: #95e6cb;
+  --quarto-hl-ch-color: #95e6cb;
+  --quarto-hl-co-color: #626a73;
+  --quarto-hl-cv-color: #ffee99;
+  --quarto-hl-cn-color: #ffee99;
+  --quarto-hl-cf-color: #ff8f40;
+  --quarto-hl-dt-color: #ff8f40;
+  --quarto-hl-dv-color: #e6b450;
+  --quarto-hl-do-color: #626a73;
+  --quarto-hl-er-color: #ff3333;
+  --quarto-hl-ex-color: #59c2ff;
+  --quarto-hl-fl-color: #e6b450;
+  --quarto-hl-fu-color: #ffb454;
+  --quarto-hl-im-color: #c2d94c;
+  --quarto-hl-in-color: #e6b450;
+  --quarto-hl-kw-color: #ff8f40;
+  --quarto-hl-op-color: #f29668;
+  --quarto-hl-pp-color: #f07178;
+  --quarto-hl-re-color: #59c2ff;
+  --quarto-hl-sc-color: #95e6cb;
+  --quarto-hl-ss-color: #95e6cb;
+  --quarto-hl-st-color: #c2d94c;
+  --quarto-hl-va-color: #39bae6;
+  --quarto-hl-vs-color: #c2d94c;
+  --quarto-hl-wa-color: #f07178;
 }
 
 /* other quarto variables */
+:root {
+  --quarto-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+code span.al {
+  background-color: #2a0f15;
+  font-weight: bold;
+  color: #ff3333;
+}
+
+code span.an {
+  color: #e6b673;
+}
+
+code span.at {
+  color: #59c2ff;
+}
+
+code span.bn {
+  color: #e6b450;
+}
+
+code span.bu {
+  color: #95e6cb;
+}
+
+code span.ch {
+  color: #95e6cb;
+}
+
+code span.co {
+  font-style: italic;
+  color: #626a73;
+}
+
+code span.cv {
+  color: #ffee99;
+}
+
+code span.cn {
+  color: #ffee99;
+}
+
+code span.cf {
+  font-weight: bold;
+  color: #ff8f40;
+}
+
+code span.dt {
+  color: #ff8f40;
+}
+
+code span.dv {
+  color: #e6b450;
+}
+
+code span.do {
+  color: #626a73;
+}
+
+code span.er {
+  color: #ff3333;
+  text-decoration: underline;
+}
+
+code span.ex {
+  font-weight: bold;
+  color: #59c2ff;
+}
+
+code span.fl {
+  color: #e6b450;
+}
+
+code span.fu {
+  color: #ffb454;
+}
+
+code span.im {
+  color: #c2d94c;
+}
+
+code span.in {
+  color: #e6b450;
+}
+
+code span.kw {
+  font-weight: bold;
+  color: #ff8f40;
+}
+
 pre > code.sourceCode > span {
-  color: #003B4F;
+  color: #b3b1ad;
 }
 
 code span {
-  color: #003B4F;
+  color: #b3b1ad;
 }
 
 code.sourceCode > span {
-  color: #003B4F;
+  color: #b3b1ad;
 }
 
 div.sourceCode,
 div.sourceCode pre.sourceCode {
-  color: #003B4F;
-}
-
-code span.ot {
-  color: #003B4F;
-  font-style: inherit;
-}
-
-code span.at {
-  color: #657422;
-  font-style: inherit;
-}
-
-code span.ss {
-  color: #20794D;
-  font-style: inherit;
-}
-
-code span.an {
-  color: #5E5E5E;
-  font-style: inherit;
-}
-
-code span.fu {
-  color: #4758AB;
-  font-style: inherit;
-}
-
-code span.st {
-  color: #20794D;
-  font-style: inherit;
-}
-
-code span.cf {
-  color: #003B4F;
-  font-weight: bold;
-  font-style: inherit;
+  color: #b3b1ad;
 }
 
 code span.op {
-  color: #5E5E5E;
-  font-style: inherit;
-}
-
-code span.er {
-  color: #AD0000;
-  font-style: inherit;
-}
-
-code span.bn {
-  color: #AD0000;
-  font-style: inherit;
-}
-
-code span.al {
-  color: #AD0000;
-  font-style: inherit;
-}
-
-code span.va {
-  color: #111111;
-  font-style: inherit;
-}
-
-code span.bu {
-  font-style: inherit;
-}
-
-code span.ex {
-  font-style: inherit;
+  color: #f29668;
 }
 
 code span.pp {
-  color: #AD0000;
-  font-style: inherit;
+  color: #f07178;
 }
 
-code span.in {
-  color: #5E5E5E;
-  font-style: inherit;
-}
-
-code span.vs {
-  color: #20794D;
-  font-style: inherit;
-}
-
-code span.wa {
-  color: #5E5E5E;
-  font-style: italic;
-}
-
-code span.do {
-  color: #5E5E5E;
-  font-style: italic;
-}
-
-code span.im {
-  color: #00769E;
-  font-style: inherit;
-}
-
-code span.ch {
-  color: #20794D;
-  font-style: inherit;
-}
-
-code span.dt {
-  color: #AD0000;
-  font-style: inherit;
-}
-
-code span.fl {
-  color: #AD0000;
-  font-style: inherit;
-}
-
-code span.co {
-  color: #5E5E5E;
-  font-style: inherit;
-}
-
-code span.cv {
-  color: #5E5E5E;
-  font-style: italic;
-}
-
-code span.cn {
-  color: #8f5902;
-  font-style: inherit;
+code span.re {
+  background-color: #173649;
+  color: #59c2ff;
 }
 
 code span.sc {
-  color: #5E5E5E;
-  font-style: inherit;
+  color: #95e6cb;
 }
 
-code span.dv {
-  color: #AD0000;
-  font-style: inherit;
+code span.ss {
+  color: #95e6cb;
 }
 
-code span.kw {
-  color: #003B4F;
-  font-weight: bold;
-  font-style: inherit;
+code span.st {
+  color: #c2d94c;
+}
+
+code span.va {
+  color: #39bae6;
+}
+
+code span.vs {
+  color: #c2d94c;
+}
+
+code span.wa {
+  color: #f07178;
 }
 
 .prevent-inlining {
